--- a/news.html
+++ b/news.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,7 +9,19 @@
   <link rel="stylesheet" href="styles/responsive-nav.css">
 </head>
 <body>
-    <div class="header">   
+    <div class="header">
+        <div class="main-nav nav-collapse clear-fix">
+            <div class="logo"><a href="#"><img src="images//bee-logo.png" alt="" /></a></div>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Learn</a></li>
+                <li><a href="#">Contact</a></li>
+                <li class="donate"><a href="#">Donate</a></li>
+            </ul>
+        </div>
+    </div>
+    <<!--div class="header">   
       <div class="main-nav nav-collapse clear-fix">
        <div class="logo"><a href="#"><img src="images/bee-logo.png" alt=""></a></div>
         <ul> 
@@ -20,7 +32,7 @@
           <li class="donate"><a href="#">Donate</a></li>
         </ul>
       </div>
-    </div>
+    </div>-->
     <div class="secondary-page clear-fix">
       <h1>News</h1>
       <div class="sidebar">
