added links to tow pages, background of input was changed as well.

--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#">About</a></li>
                 <li><a href="#">News</a></li>
-                <li><a href="#">Learn</a></li>
+                <li><a href="beekeeping-guide.html">Learn</a></li>
                 <li><a href="#">Contact</a></li>
                 <li class="donate"><a href="#">Donate</a></li>
             </ul>
