--- a/beekeeping-guide.html
+++ b/beekeeping-guide.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -13,7 +13,7 @@
       <div class="main-nav nav-collapse clear-fix">
        <div class="logo"><a href="#"><img src="images/bee-logo.png" alt=""></a></div>
         <ul> 
-          <li><a href="#">About</a></li>
+          <li><a href="news.html">About</a></li>
           <li><a href="#">News</a></li>
           <li><a href="#">Learn More</a></li>
           <li><a href="#">Contact</a></li>
