--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
           <h2>Non-profit Teaches Kids Beekeeping Skills</h2>
           <p>We joined the local chapter of AEP this weekend for their annual Apiculture Week where volunteers taught kids about the benefits of raising bees and the basics of apiculture, or beekeeping. The event also featured a craft fair with honey and beeswax-based products for purchase.  Profits from the craft fair help support efforts for sustainable and ethical apiculture.  </p>
           <div class="article-image">
-              <img src="images/bee.jpg" alt="">
+              <img src="images/Bee.jpg" alt="">
               <p class="article-caption">Local apiaries generously donated equipment for the event</p>
           </div>
           <h6>More Information</h6>
